--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h3 class="heading-2">the virus</h3>
             <P class="text">this is not a virus but it you are wondering uhhh Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
             <h3 class="download-text">click here to download</h3>
-            <form method="get" action="fart.py">
+            <form method="get" action="download.py">
                 <button class="download-button" type="submit">here</button>
              </form>
         </section>
